Fix language content alignment

--- a/assets/sass/dal-overrides.scss
+++ b/assets/sass/dal-overrides.scss
@@ -114,7 +114,7 @@ body {
 .language-menu {
 	display: flex;
 	list-style: none;
-	justify-content: end;
+	justify-content: flex-end;
 	font-size: 1rem;
 
 	li:first-child {
@@ -144,4 +144,14 @@ body {
 	.has-post-thumbnail .entry-header {
 		padding-bottom: calc(2 * var(--global--spacing-vertical));
 	}
+}
+
+.remove-bottom-margin {
+	margin-bottom: 0 !important;
+	padding-bottom: 0 !important;
+}
+
+.remove-top-margin {
+	padding-top: 0 !important;
+	margin-top: 0 !important;
 }
